Bigger font in iOS TabStrip. Fix the visible layout divs.

--- a/styles/mobile/common.less
+++ b/styles/mobile/common.less
@@ -101,6 +101,11 @@
     background: #1a1a1a;
 }
 
+[data-role="layout"]
+{
+    display: none;
+}
+
 .km-tabstrip
 {
     .box-align(start);
